feat(ng-sidebar-accordion) add support pin sidebar

--- a/ng-sidebar-accordion/index.html
+++ b/ng-sidebar-accordion/index.html
@@ -1,12 +1,13 @@
-<!doctype html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Demo</title>
-  <base href="./ng-sidebar-accordion">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="./ng-sidebar-accordion">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="/styles/font-awesome/css/font-awesome.min.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="/styles/font-awesome/css/font-awesome.min.css"></noscript>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.7887328a0f8cee4a9e7b.css"></head>
+<style>body,html{height:100%;margin:0;padding:0;}</style><link rel="stylesheet" href="styles.3850bb356df2a92c51db.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.3850bb356df2a92c51db.css"></noscript></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.d7f438905a78995e41d5.js" nomodule defer></script><script src="polyfills-es2015.4265614f51b38bdc5abc.js" type="module"></script><script src="main-es2015.46a3923d42324cbbbf89.js" type="module"></script><script src="main-es5.46a3923d42324cbbbf89.js" nomodule defer></script></body>
-</html>
+<script src="runtime-es2015.14c293a6e83e30587467.js" type="module"></script><script src="runtime-es5.14c293a6e83e30587467.js" nomodule defer></script><script src="polyfills-es5.1fdffd9b43968935f445.js" nomodule defer></script><script src="polyfills-es2015.d40d5b66e305ad29414b.js" type="module"></script><script src="main-es2015.48c8dda3c0c338492bfc.js" type="module"></script><script src="main-es5.48c8dda3c0c338492bfc.js" nomodule defer></script>
+
+</body></html>
